add os lib to make static file location

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react": "^7.23.2"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
+    "fs": "0.0.1-security",
     "os": "^0.1.1",
     "path": "^0.12.7",
     "yargs": "^17.0.1"
